fix(CI/CD): Correct reference to tag name in Github action pipeline
This commit fixes an issue in the Github action pipeline by correcting the reference to the tag name that triggered the pipeline. The previous reference was incorrect and caused the pipeline to fail. The corrected reference ensures that the pipeline can properly access the tag name and use it for the intended purpose.

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Build package
         run: python setup.py sdist
       - name: Publish package
-        run: twine upload ./dist/django-appwrite-${{ github.ref }}
+        run: twine upload ./dist/django-appwrite-${{ github.ref_name }}.tar.gz
         env:
             TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
